# tabnews-pyqt

./: .gitignore  pyproject.toml  requirements.txt  ruff.toml
http/: requests.http
src/: .env  main.py
src/lib/: dataclasses.py  improved_qtableview.py  items_select_popup.py
src/mockdata/: content.json  content_Andreldev_extension-methods-em-c-e-prototypes-em-javascript-olha-essa-similaridade-incrivel.json  content_Opaopaopa_pwa-vale-a-pena.json  content_altoeandre_entendendo-escalabilidade-em-sistemas-de-software.json  content_gustavohpss_pitch-letterboxd-para-partidas-de-futebol-em-5-dias.json  content_inacio000_e-se-eu-te-contar-como-desenvolvi-uma-solucao-recentemente-no-meu-dormitorio-usando-nodejs-e-reactjs.json  content_jorgeedvaldo_saiba-como-usar-inteligencia-artificial-offline-sem-necessidade-de-internet.json  content_silvestrini_php-8-4-oficialmente-lancado-cheio-de-novidades.json
src/model/: model.py
src/view/: main-side-description.py  main_side_description.py  maintable.py
