[project]
name = "tabnews-pyqt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "PyQt5==5.15.10",
    "PyQt5-Qt5==5.15.2",
    "PyQt5-sip==12.13.0",
]

[tool.mypy]
disable_error_code = "import-untyped,union-attr,assignment"
